--- a/sass/site/_site.scss
+++ b/sass/site/_site.scss
@@ -1,6 +1,10 @@
 // @import "../layout/content-sidebar";
 // @import "../layout/sidebar-content";
 
+// Header Section
+// =============================================================
+@import "header";
+
 /*--------------------------------------------------------------
 ## Posts and pages
 --------------------------------------------------------------*/
@@ -10,3 +14,7 @@
 ## Comments
 --------------------------------------------------------------*/
 @import "primary/comments";
+
+// Footer Section
+// =============================================================
+@import "footer";
