--- a/sass/site/_site.scss
+++ b/sass/site/_site.scss
@@ -1,5 +1,7 @@
-// @import "../layout/content-sidebar";
-// @import "../layout/sidebar-content";
+/*--------------------------------------------------------------
+## Global Settings
+--------------------------------------------------------------*/
+@import "../layout/global";
 
 /*--------------------------------------------------------------
 ## Posts and pages
