--- a/sass/site/_site.scss
+++ b/sass/site/_site.scss
@@ -4,6 +4,11 @@
 @import "../layout/global";
 
 /*--------------------------------------------------------------
+## Header
+--------------------------------------------------------------*/
+@import "header";
+
+/*--------------------------------------------------------------
 ## Posts and pages
 --------------------------------------------------------------*/
 @import "primary/posts-and-pages";
@@ -12,3 +17,7 @@
 ## Comments
 --------------------------------------------------------------*/
 @import "primary/comments";
+
+/*--------------------------------------------------------------
+## Footer
+--------------------------------------------------------------*/
