added footer partial

--- a/sass/site/_site.scss
+++ b/sass/site/_site.scss
@@ -21,3 +21,4 @@
 /*--------------------------------------------------------------
 ## Footer
 --------------------------------------------------------------*/
+@import "footer";
