--- a/sass/style.scss
+++ b/sass/style.scss
@@ -3,7 +3,7 @@ Theme Name: gcostudios
 Theme URI: https://gcostudios.com/
 Author: Jose Guerra
 Author URI: https://joseguerra.uk
-Description: A custom theme
+Description: GCO Studios' 2020 WordPress theme.
 Version: 1.0.0
 Text Domain: gcostudios
 */
@@ -36,7 +36,7 @@ Text Domain: gcostudios
 /*--------------------------------------------------------------
 # Normalize
 --------------------------------------------------------------*/
-@import "normalize";
+@import "bootstrap-reboot";
 
 /*--------------------------------------------------------------
 # Typography
