added hero partial

--- a/sass/site/_site.scss
+++ b/sass/site/_site.scss
@@ -6,7 +6,8 @@
 /*--------------------------------------------------------------
 ## Header
 --------------------------------------------------------------*/
-@import "header";
+@import "header",
+        "hero-treatment";
 
 /*--------------------------------------------------------------
 ## Posts and pages
