removed unnecessary styles

--- a/sass/site/_header.scss
+++ b/sass/site/_header.scss
@@ -1,16 +1,5 @@
-#masthead {
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: space-between;
+#masthead {}
 
+.site-branding {}
 
-  .site-branding {
-    display: flex;
-    max-width: 30%;
-  }
-}
-
-#site-navigation {
-  display: flex;
-  // max-width: 60%;
-}
+#site-navigation {}
