updated section description

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -34,7 +34,7 @@ Text Domain: gcostudios
 @import "mixins/mixins-master";
 
 /*--------------------------------------------------------------
-# Normalize
+# Bootstrap Reboot
 --------------------------------------------------------------*/
 @import "bootstrap-reboot";
 
