--- a/sass/site/_hero-treatment.scss
+++ b/sass/site/_hero-treatment.scss
@@ -1,14 +1,55 @@
 .hero-treatment {
   background-color: #f9f9f9;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
   height: 100vh;
   display: flex;
   flex-flow: column;
   justify-content: flex-end;
   align-items: flex-start;
+  position: relative;
+
+  &::before {
+    content: '';
+    background-image: linear-gradient(180deg, rgba(0,0,0,0.7) 0%, rgba(0,0,0,0) 50%, rgba(0, 0, 0, 0.7) 100%);
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
 }
 
 .hero-inner {
   @include compartment;
-  margin-bottom: 8rem;
+  color: white;
+  margin-bottom: cre(60px);
   width: 100%;
+
+  a {
+    color: white;
+    position: relative;
+
+    &::before {
+      content: '';
+      background-color: white;
+      width: 100%;
+      max-width: 0;
+      height: 1px;
+      position: absolute;
+      bottom: cre(-4px);
+      left: 0;
+      transition: 0.5s ease;
+    }
+
+    &:focus,
+    &:hover {
+      text-decoration: none;
+
+      &::before {
+        max-width: 100%;
+      }
+    }
+  }
 }
