added colour variables

--- a/sass/variables-site/_colors.scss
+++ b/sass/variables-site/_colors.scss
@@ -18,3 +18,8 @@ $color__border-button-hover: #ccc #bbb #aaa;
 $color__border-button-focus: #aaa #bbb #bbb;
 $color__border-input: #ccc;
 $color__border-abbr: #666;
+
+// Custom colour palette
+$color__section-primary: #f5f5fA;
+$color__section-secondary: #e7ecf0;
+$color__section-tertiary: #35434e;
