--- a/sass/site/_site.scss
+++ b/sass/site/_site.scss
@@ -12,7 +12,8 @@
 /*--------------------------------------------------------------
 ## Posts and pages
 --------------------------------------------------------------*/
-@import "primary/posts-and-pages";
+@import "home",
+        "primary/posts-and-pages";
 
 /*--------------------------------------------------------------
 ## Comments
