updated font family

--- a/sass/variables-site/_typography.scss
+++ b/sass/variables-site/_typography.scss
@@ -1,3 +1,21 @@
+// Kyrial Sans Pro
+$font-family-1: kyrial-sans-pro, sans-serif;
+
+// Regular
+$font-family-2: kyrial-sans-pro, sans-serif;
+// font-weight: 400;
+// font-style: normal;
+
+// SemiBold
+$font-family-3: kyrial-sans-pro, sans-serif;
+// font-weight: 600;
+// font-style: normal;
+
+// Bold
+$font-family-4: kyrial-sans-pro, sans-serif;
+// font-weight: 700;
+// font-style: normal;
+
 $font__main: sans-serif;
 $font__code: Monaco, Consolas, "Andale Mono", "DejaVu Sans Mono", monospace;
 $font__pre: "Courier 10 Pitch", Courier, monospace;
