--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,25 +1,14 @@
 /*!
 Theme Name: gcostudios
-Theme URI: http://underscores.me/
+Theme URI: https://github.com/GCOstudios/gcostudios
 Author: Jose Guerra
 Author URI: https://joseguerra.uk
 Description: A custom theme
 Version: 1.0.0
 Tested up to: 5.4
 Requires PHP: 5.6
-License: GNU General Public License v2 or later
-License URI: LICENSE
 Text Domain: gcostudios
 Tags: custom-background, custom-logo, custom-menu, featured-images, threaded-comments, translation-ready
-
-This theme, like WordPress, is licensed under the GPL.
-Use it to make something cool, have fun, and share what you've learned.
-
-gcostudios is based on Underscores https://underscores.me/, (C) 2012-2020 Automattic, Inc.
-Underscores is distributed under the terms of the GNU GPL v2 or later.
-
-Normalizing styles have been helped along thanks to the fine work of
-Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 */
 
 /*--------------------------------------------------------------
